--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "material-dashboard-react",
+  "name": "Graph_App",
   "version": "1.6.0",
-  "description": "Material Dashboard React. Coded by Creative Tim",
+  "description": "Material Dashboard React",
   "private": false,
   "main": "dist/index.js",
   "dependencies": {
