--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "Material Dashboard React",
   "private": false,
   "main": "dist/index.js",
+  "engines": {
+    "node":"9.5.0",
+    "npm":"5.7.1"
+  },
   "dependencies": {
     "@material-ui/core": "3.9.2",
     "@material-ui/icons": "3.0.2",
