--- a/package.json
+++ b/package.json
@@ -2,12 +2,7 @@
   "name": "Graph_App",
   "version": "1.6.0",
   "description": "Material Dashboard React",
-  "private": false,
-  "main": "dist/index.js",
-  "engines": {
-    "node":"9.5.0",
-    "npm":"5.7.1"
-  },
+  "private": true,
   "dependencies": {
     "@material-ui/core": "3.9.2",
     "@material-ui/icons": "3.0.2",
@@ -25,19 +20,21 @@
     "react-grid-layout": "^0.16.6",
     "react-router-dom": "4.3.1",
     "react-scripts": "2.1.5",
-    "react-swipeable-views": "0.13.1"
+    "react-swipeable-views": "0.13.1",
+    "serve": "^11.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
     "lint:check": "eslint . --ext=js,jsx;  exit 0",
     "lint:fix": "eslint . --ext=js,jsx --fix;  exit 0",
     "build-package-css": "cp src/assets/css/material-dashboard-react.css dist/material-dashboard-react.css",
-    "build-package": "npm run build-package-css && babel src --out-dir dist",
-    "now-build": "react-scripts build"
+    "build-package": "npm run build-package-css && babel src --out-dir dist"
   },
   "browserslist": [
     ">0.2%",
